Add div for each menu button

--- a/index.html
+++ b/index.html
@@ -7,8 +7,31 @@
     </head>
 
     <body>
-        <div>
+        <div id="menu">
+            <button class="menu-button">Home</button>
+            <button class="menu-button">About</button>
+            <button class="menu-button">Tokenomics</button>
+            <button class="menu-button">Road Map</button>
+            <button class="menu-button">Docs</button>
+            <button class="menu-button">Contact</button>
+            <button class="menu-button">Launch dApp</button>
+        </div>
+        <div id="title-section">
             <h1>Nova Lux Network</h1>
+        </div>
+        <div id="about-section">
+            <h2>About</h2>
+        </div>
+        <div id="tokenomics-section">
+            <h2>Lux Token</h2>
+            <h2>nLux Token</h2>
+            <h2>Tokenomics</h2>
+        </div>
+        <div id="road-map-section">
+            <h2>Our Future is Bright!</h2>
+        </div>
+        <div id="footer">
+            <p>Contact Us</p>
         </div>
     </body>
 </html>
